--- a/topic_list/problem_template.css
+++ b/topic_list/problem_template.css
@@ -47,7 +47,7 @@ main{
 .showAnswer{
     background: #c2fda0;
     width:fit-content;
-    padding:5px;
+    padding:5px 25px;
     border-radius: 5px;
     border: 1px grey dotted;
 }
