--- a/topic_list/problem_template.css
+++ b/topic_list/problem_template.css
@@ -46,7 +46,7 @@ main{
     border:1px dotted rgb(23, 102, 65);
     margin-bottom: 10px;
 }
-.problem:nth-child(2n+1){
+.problem:nth-child(2n){
     background:rgb(197, 234, 247); 
 }
 .questionTitle{
